fix: remove scrollbar

--- a/Vue/src/assets/base.css
+++ b/Vue/src/assets/base.css
@@ -61,6 +61,7 @@
 
 body {
   min-height: 100vh;
+  overflow-x: hidden;
   color: var(--color-text);
   background: var(--color-background);
   transition:
@@ -84,4 +85,8 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+body::-webkit-scrollbar {
+  display: none !important;
 }
